# yadisk-client

./: README.md  pyproject.toml  requirements.txt
src/yadisk_client/: __init__.py
