[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yadisk_client"
version = "0.0.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "A client for Yandex.Disk"
readme = "README.md"
dependencies = [
    "yadisk",
    "requests",
]

[project.urls]
Homepage = "https://github.com/tans1q/yadisk-client"
Issues = "https://github.com/tans1q/yadisk-client/issues"